--- a/rp/package.json
+++ b/rp/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "release-planner",
-  "description": "Release planner app",
-  "version": "0.0.1",
-  "private": true,
+  "name": "release-planner", 
+  "description": "Release planner app", 
+  "version": "0.0.1", 
+  "private": true, 
   "dependencies": {
-    "express": "3.x", 
-    "pg": "2.x"
+     "express": "3.x", 
+     "pg": "2.x", 
+     "sql": "0.x"
   }
 }
