--- a/rp/package.json
+++ b/rp/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
      "express": "3.x", 
      "pg": "2.x", 
-     "sql": "0.x"
+     "sql": "0.x", 
+     "underscore": "1.x"
   }
 }
